fixed events section coursal overflow

--- a/app/src/components/Events/Events.module.css
+++ b/app/src/components/Events/Events.module.css
@@ -9,7 +9,6 @@
     color: #fff;
 }
 .carousel-container {
-    display: block;
     position: relative;
     width: 300px; 
     height: 300px;
@@ -19,7 +18,6 @@
     width: 40%;
     height: 100%;
     margin: 5em auto; 
-    position: relative;
     transform-style: preserve-3d;
     animation: rotate 12s infinite linear;
     cursor: pointer;
